authz-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: zerotrust
spec:
  selector:
    matchLabels:
      app: backend
  action: DENY
  rules:
  - {}
